# Abaqus-Control-MCP

./: .gitignore  LICENSE  README.md  README_ZH.md  SECURITY.md  install_gui_plugin.ps1  pyproject.toml
.claude/: mcp.json  settings.json
.github/: copilot-instructions.md
.github/skills/abaqus-mcp-analysis/: SKILL.md
abaqus_mcp_bridge/: __init__.py  agent.py  cli.py  gui_plugin.py  server.py
abaqus_plugins/: abaqus_mcp_gui_plugin.py
config-examples/: claude-code-mcp.json
docs/: upstream-v2-optimization-notes.md
examples/: create_cantilever.py
src/abaqus_mcp_bridge/: __init__.py  agent.py  cli.py  client.py  gui_plugin.py  installer.py  protocol.py  server.py
