[project]
name = "abaqus-control-mcp"
version = "0.1.0"
description = "Local MCP bridge for real-time control of Abaqus/CAE through Claude, Cursor, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["abaqus", "mcp", "automation", "cae", "finite-element", "claude", "ai"]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
abaqus-control-mcp-server = "abaqus_mcp_bridge.server:main"
abaqus-control-check = "abaqus_mcp_bridge.cli:check_main"
abaqus-control-demo = "abaqus_mcp_bridge.cli:demo_cantilever_main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
