[project]
name = "abaqus-control-mcp"
version = "0.1.0"
description = "Local MCP bridge for real-time control of Abaqus/CAE through Claude, Cursor, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["abaqus", "mcp", "automation", "cae", "finite-element", "claude", "ai"]
dependencies = [
    "mcp>=1.0.0",
    "anyio>=3.0.0",
    "matplotlib>=3.10.9",
]

[project.scripts]
abaqus-control-mcp-server = "abaqus_mcp_bridge.server:main"
abaqus-control-check = "abaqus_mcp_bridge.cli:check_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/abaqus_mcp_bridge"]
